feat: allow to get permissions
