# shared/proto/account-service/requests/permission/rpc_get_permissions.pb.go
@@ -1,0 +1,184 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: account-service/requests/permission/rpc_get_permissions.proto
+
+package permission
+
+import (
+	models "github.com/nicodanke/gesty-api/shared/proto/account-service/models"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetPermissionsRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Page          *int32                 `protobuf:"varint,1,opt,name=page,proto3,oneof" json:"page,omitempty"`
+	Size          *int32                 `protobuf:"varint,2,opt,name=size,proto3,oneof" json:"size,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetPermissionsRequest) Reset() {
+	*x = GetPermissionsRequest{}
+	mi := &file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetPermissionsRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetPermissionsRequest) ProtoMessage() {}
+
+func (x *GetPermissionsRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetPermissionsRequest.ProtoReflect.Descriptor instead.
+func (*GetPermissionsRequest) Descriptor() ([]byte, []int) {
+	return file_account_service_requests_permission_rpc_get_permissions_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetPermissionsRequest) GetPage() int32 {
+	if x != nil && x.Page != nil {
+		return *x.Page
+	}
+	return 0
+}
+
+func (x *GetPermissionsRequest) GetSize() int32 {
+	if x != nil && x.Size != nil {
+		return *x.Size
+	}
+	return 0
+}
+
+type GetPermissionsResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Permissions   []*models.Permission   `protobuf:"bytes,1,rep,name=permissions,proto3" json:"permissions,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetPermissionsResponse) Reset() {
+	*x = GetPermissionsResponse{}
+	mi := &file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetPermissionsResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetPermissionsResponse) ProtoMessage() {}
+
+func (x *GetPermissionsResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetPermissionsResponse.ProtoReflect.Descriptor instead.
+func (*GetPermissionsResponse) Descriptor() ([]byte, []int) {
+	return file_account_service_requests_permission_rpc_get_permissions_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetPermissionsResponse) GetPermissions() []*models.Permission {
+	if x != nil {
+		return x.Permissions
+	}
+	return nil
+}
+
+var File_account_service_requests_permission_rpc_get_permissions_proto protoreflect.FileDescriptor
+
+const file_account_service_requests_permission_rpc_get_permissions_proto_rawDesc = "" +
+	"\n" +
+	"=account-service/requests/permission/rpc_get_permissions.proto\x123account_service.requests.permission.get_permissions\x1a'account-service/models/permission.proto\"[\n" +
+	"\x15GetPermissionsRequest\x12\x17\n" +
+	"\x04page\x18\x01 \x01(\x05H\x00R\x04page\x88\x01\x01\x12\x17\n" +
+	"\x04size\x18\x02 \x01(\x05H\x01R\x04size\x88\x01\x01B\a\n" +
+	"\x05_pageB\a\n" +
+	"\x05_size\"i\n" +
+	"\x16GetPermissionsResponse\x12O\n" +
+	"\vpermissions\x18\x01 \x03(\v2-.account_service.models.permission.PermissionR\vpermissionsBQZOgithub.com/nicodanke/gesty-api/shared/proto/account-service/requests/permissionb\x06proto3"
+
+var (
+	file_account_service_requests_permission_rpc_get_permissions_proto_rawDescOnce sync.Once
+	file_account_service_requests_permission_rpc_get_permissions_proto_rawDescData []byte
+)
+
+func file_account_service_requests_permission_rpc_get_permissions_proto_rawDescGZIP() []byte {
+	file_account_service_requests_permission_rpc_get_permissions_proto_rawDescOnce.Do(func() {
+		file_account_service_requests_permission_rpc_get_permissions_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_account_service_requests_permission_rpc_get_permissions_proto_rawDesc), len(file_account_service_requests_permission_rpc_get_permissions_proto_rawDesc)))
+	})
+	return file_account_service_requests_permission_rpc_get_permissions_proto_rawDescData
+}
+
+var file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_account_service_requests_permission_rpc_get_permissions_proto_goTypes = []any{
+	(*GetPermissionsRequest)(nil),  // 0: account_service.requests.permission.get_permissions.GetPermissionsRequest
+	(*GetPermissionsResponse)(nil), // 1: account_service.requests.permission.get_permissions.GetPermissionsResponse
+	(*models.Permission)(nil),      // 2: account_service.models.permission.Permission
+}
+var file_account_service_requests_permission_rpc_get_permissions_proto_depIdxs = []int32{
+	2, // 0: account_service.requests.permission.get_permissions.GetPermissionsResponse.permissions:type_name -> account_service.models.permission.Permission
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_account_service_requests_permission_rpc_get_permissions_proto_init() }
+func file_account_service_requests_permission_rpc_get_permissions_proto_init() {
+	if File_account_service_requests_permission_rpc_get_permissions_proto != nil {
+		return
+	}
+	file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes[0].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_account_service_requests_permission_rpc_get_permissions_proto_rawDesc), len(file_account_service_requests_permission_rpc_get_permissions_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_account_service_requests_permission_rpc_get_permissions_proto_goTypes,
+		DependencyIndexes: file_account_service_requests_permission_rpc_get_permissions_proto_depIdxs,
+		MessageInfos:      file_account_service_requests_permission_rpc_get_permissions_proto_msgTypes,
+	}.Build()
+	File_account_service_requests_permission_rpc_get_permissions_proto = out.File
+	file_account_service_requests_permission_rpc_get_permissions_proto_goTypes = nil
+	file_account_service_requests_permission_rpc_get_permissions_proto_depIdxs = nil
+}
